--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,9 @@
 # Webサーバー設定
-WEB_PORT=9999
+PORT=9999
 
 # 音声認識設定
-WHISPER_MODEL_SIZE=medium
-WHISPER_LANGUAGE=ja
+MODEL_SIZE=medium
+LANGUAGE=ja
+
+# 要約機能設定
+SUMMARIZE_ENABLED=true
