--- a/compose.yaml
+++ b/compose.yaml
@@ -13,12 +13,17 @@ services:
     environment:
       - MODEL_SIZE=${MODEL_SIZE:-medium}
       - LANGUAGE=${LANGUAGE:-ja}
+      - SUMMARIZE_ENABLED=${SUMMARIZE_ENABLED:-true}
     restart: unless-stopped
+    # メモリ使用量の制限（要約モデル用）
+    mem_limit: 8G
+    mem_reservation: 4G
     # 初期化スクリプトを実行
     entrypoint: >
       bash -c "
-        mkdir -p /data/uploads /data/processed /data/exports /data/logs /data/config &&
+        mkdir -p /data/uploads /data/processed /data/exports /data/logs /data/config /data/cache &&
         chown -R www-data:www-data /data /models &&
+        chmod -R 775 /data /models &&
         apache2-foreground
       "
 
