update:要約が安定しないが一旦コミット

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,8 @@ LANGUAGE=ja
 
 # 要約機能設定
 SUMMARIZE_ENABLED=true
+
+# Ollama設定
+USE_OLLAMA=true
+OLLAMA_API_URL=http://host.docker.internal:11434/api/generate
+OLLAMA_MODEL=llama3
