update:文字起こしのみを取り扱うように変更

--- a/.env.sample
+++ b/.env.sample
@@ -1,14 +1,3 @@
-# Webサーバー設定
 PORT=9999
-
-# 音声認識設定
-MODEL_SIZE=medium
+MODEL_SIZE=small
 LANGUAGE=ja
-
-# 要約機能設定
-SUMMARIZE_ENABLED=true
-
-# Ollama設定
-USE_OLLAMA=true
-OLLAMA_API_URL=http://host.docker.internal:11434/api/generate
-OLLAMA_MODEL=llama3
