--- a/compose.yaml
+++ b/compose.yaml
@@ -13,18 +13,8 @@ services:
     environment:
       - MODEL_SIZE=${MODEL_SIZE:-medium}
       - LANGUAGE=${LANGUAGE:-ja}
-      - SUMMARIZE_ENABLED=${SUMMARIZE_ENABLED:-true}
-      - USE_OLLAMA=${USE_OLLAMA:-true}
-      - OLLAMA_API_URL=${OLLAMA_API_URL:-http://host.docker.internal:11434/api/generate}
-      - OLLAMA_MODEL=${OLLAMA_MODEL:-llama3}
+      - APP_NAME=SHOKI
     restart: unless-stopped
-    # メモリ使用量の制限（要約モデル用）
-    mem_limit: 8G
-    mem_reservation: 4G
-    # ホストネットワークとの接続性を確保（Ollama API用）
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    # 初期化スクリプトを実行
     entrypoint: >
       bash -c "
         mkdir -p /data/uploads /data/processed /data/exports /data/logs /data/config /data/cache /data/archives &&
