add:要約サマリー機能と別で要約APIを叩く機能を追加、過去の音声履歴を表示機能を追加、スクリプト単体で入れ替え可能なようにマウントさせる構造に変更

--- a/compose.yaml
+++ b/compose.yaml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./data:/data
-      - ./models:/models
+      - ./src:/var/www/html  # srcディレクトリをウェブルートにマウント
     ports:
       - "${PORT:-9999}:80"
     environment:
@@ -20,10 +20,10 @@ services:
     entrypoint: >
       bash -c "
         mkdir -p /data/uploads /data/processed /data/exports /data/logs /data/config /data/cache /data/archives &&
-        chown -R www-data:www-data /data /models &&
-        chmod -R 775 /data /models &&
+        chown -R www-data:www-data /data /var/www/html &&
+        chmod -R 775 /data /var/www/html &&
         /usr/local/bin/docker-entrypoint.sh
       "
 
 volumes:
-  models:
+  data:
